added rotation to plan script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ endfunction()
 
 # main functions
 add_executable(gen_spinon_basis
-    src/gen_spinon_basis.cpp
+    src/gen_0spinon_basis.cpp
     src/tetra_graph_io.cpp
     src/pyro_tree.cpp
 )
