--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,10 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic -g -O0 -D_GLIBCXX_USE_CXX11_ABI=1")
     target_compile_definitions(gen_spinon_basis_parallel PRIVATE VERBOSITY=3)
     target_compile_definitions(gen_spinon_basis PRIVATE VERBOSITY=3)
+elseif(CMAKE_BUILD_TYPE STREQUAL "QuietDebug")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic -g -O1 -D_GLIBCXX_USE_CXX11_ABI=1")
+    target_compile_definitions(gen_spinon_basis_parallel PRIVATE VERBOSITY=0)
+    target_compile_definitions(gen_spinon_basis PRIVATE VERBOSITY=0)
 else()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG -Ofast")
 endif()
