--- a/src/meson.build
+++ b/src/meson.build
@@ -1,8 +1,10 @@
 
-gen_spinon_basis = executable('gen_spinon_basis', files([
-  'gen_spinon_basis.cpp',
+common_sources = [
   'pyro_tree.cpp',
   'tetra_graph_io.cpp'
-  ]), 
-  dependencies: g_deps,
-  include_directories:inc)
+  ]
+
+
+spinon_basis_sources = files(['gen_spinon_basis.cpp'] + common_sources) 
+spinon_basis_parallel_sources = files(['gen_spinon_basis_parallel.cpp'] + common_sources) 
+
