resolved some compiler wrinkles

--- a/meson.build
+++ b/meson.build
@@ -5,27 +5,35 @@ project('projected_ed', ['cpp', 'c'],
 )
 
 if get_option('buildtype') == 'release'
-  add_project_arguments('-Ofast',  language : 'cpp')
+  add_project_arguments('-Ofast', language : 'cpp')
 endif
 
-
 hdf5_dep = dependency('hdf5',
-                      language: 'c',
-                      required: false,
-                      not_found_message: 'dependency HDF5 not found')
+  language: 'c',
+  required: false,
+  not_found_message: 'dependency HDF5 not found')
 
 json_dep = dependency('nlohmann_json', required: true)
 
-inc = [
-  include_directories('include')
-  ]
+eigen_dep = dependency('eigen3', required: true)
+
+spectra_dep = dependency('spectra', method: 'cmake', required: true)
+
+# Local include dir for headers like bittools.hpp, admin.hpp, basis_io
+inc = [ include_directories('include') ]
 
 g_deps = [
   hdf5_dep,
   json_dep
-  ]
+]
 
 subdir('src')
+
+# Add diagonalize_rings
+build_hamiltonian = executable('build_hamiltonian',
+  build_hamiltonian_sources,
+  dependencies: [g_deps, eigen_dep, spectra_dep],
+  include_directories: inc)
 
 gen_spinon_basis = executable('gen_spinon_basis', spinon_basis_sources, 
   dependencies: g_deps,
