--- a/src/meson.build
+++ b/src/meson.build
@@ -8,3 +8,5 @@ common_sources = [
 spinon_basis_sources = files(['gen_spinon_basis.cpp'] + common_sources) 
 spinon_basis_parallel_sources = files(['gen_spinon_basis_parallel.cpp'] + common_sources) 
 
+
+build_hamiltonian_sources = files(['build_hamiltonian.cpp'])
