stop deleting tests in release mode

--- a/meson.build
+++ b/meson.build
@@ -9,28 +9,30 @@ project('projected_ed', ['cpp', 'c'],
 cpp_compiler = meson.get_compiler('cpp')
 host_cpu = host_machine.cpu_family()
 
+target_args = []
+
 if get_option('buildtype') == 'release'
   if host_cpu.startswith('x86')
     if cpp_compiler.has_argument('-mavx2')
-      add_project_arguments('-mavx2', language : 'cpp')
+      target_args += ['-mavx2']
     elif cpp_compiler.has_argument('-mavx')
-      add_project_arguments('-mavx', language : 'cpp')
+      target_args += ['-mavx']
     endif
     if cpp_compiler.has_argument('-msse2')
-      add_project_arguments('-msse2', language : 'cpp')
+      target_args += ['-msse2']
     endif
   elif host_cpu.startswith('aarch64') or host_cpu.startswith('arm')
     if cpp_compiler.has_argument('-mfpu=neon')
-      add_project_arguments('-mfpu=neon', language : 'cpp')
+      target_args += ['-mfpu=neon']
     elif cpp_compiler.has_argument('-march=armv8-a+simd')
-      add_project_arguments('-march=armv8-a+simd', language : 'cpp')
+      target_args += ['-march=armv8-a+simd']
     endif
     if cpp_compiler.has_argument('-march=armv8-a+sha3')
-      add_project_arguments('-march=armv8-a+sha3', language : 'cpp')
+      target_args += ['-march=armv8-a+sha3']
     endif
   endif
 
-  add_project_arguments('-DNDEBUG', language : 'cpp')
+  target_args += ['-DNDEBUG']
 endif
 
 hdf5_dep = dependency('hdf5',
@@ -60,13 +62,17 @@ endif
 
 gen_spinon_basis = executable('gen_spinon_basis',spinon_basis_sources, 
   dependencies: g_deps,
-  include_directories:inc)
+  include_directories:inc,
+  cpp_args: target_args
+  )
 
 if eigen_dep.found()
 
 gen_projected_basis = executable('gen_projected_basis', files('src/gen_projected_basis.cpp'), 
   dependencies: [g_deps, eigen_dep],
-  include_directories:inc)
+  include_directories:inc,
+  cpp_args: target_args
+  )
 
 if spectra_dep.found()
 
