stop deleting tests in release mode

--- a/meson.build
+++ b/meson.build
@@ -85,7 +85,9 @@ if spectra_dep.found()
 diag_DOQSI_ham = executable('diag_DOQSI_ham',
   files(['src/diag_DOQSI_ham.cpp', 'src/expectation_eval.cpp']),
   dependencies: [g_deps, eigen_dep, spectra_dep],
-  include_directories: inc)
+  include_directories: inc,
+  cpp_args: target_args
+  )
 
 endif 
 endif
