we love segfaults

--- a/meson.build
+++ b/meson.build
@@ -88,10 +88,16 @@ gen_projected_basis = executable('gen_projected_basis', files('src/gen_projected
 
 if spectra_dep.found()
 
-
-
 diag_DOQSI_ham = executable('diag_DOQSI_ham',
   files(['src/diag_DOQSI_ham.cpp', 'src/expectation_eval.cpp']),
+  dependencies: [g_deps, eigen_dep, spectra_dep],
+  include_directories: inc,
+  cpp_args: target_args
+  )
+
+
+eval_observables = executable('eval_observables',
+  files(['src/eval_observables.cpp', 'src/expectation_eval.cpp']),
   dependencies: [g_deps, eigen_dep, spectra_dep],
   include_directories: inc,
   cpp_args: target_args
