--- a/meson.build
+++ b/meson.build
@@ -84,11 +84,11 @@ gen_spinon_basis = executable('gen_spinon_basis',spinon_basis_sources,
 
 if eigen_dep.found()
 
-gen_projected_basis = executable('gen_projected_basis', files('src/gen_projected_basis.cpp'), 
-  dependencies: [g_deps, eigen_dep],
-  include_directories:inc,
-  cpp_args: target_args
-  )
+#gen_projected_basis = executable('gen_projected_basis', files('src/gen_projected_basis.cpp'), 
+#  dependencies: [g_deps, eigen_dep],
+#  include_directories:inc,
+#  cpp_args: target_args
+#  )
 
 if spectra_dep.found()
 
