--- a/src/meson.build
+++ b/src/meson.build
@@ -6,6 +6,7 @@ common_sources = [
 
 
 spinon_basis_sources = files(['gen_spinon_basis.cpp'] + common_sources) 
+spinon_basis_big_sources = files(['sbsearch.cpp'] + common_sources) 
 
 
 build_hamiltonian_sources = files(['build_hamiltonian.cpp'])
