cleaned up main branch slightly

--- a/meson.build
+++ b/meson.build
@@ -113,6 +113,13 @@ diag_DOQSI_ham = executable('diag_DOQSI_ham',
   )
 
 
+#gs_DOQSI_ham = executable('gs_DOQSI_ham',
+#  files(['src/gs_DOQSI_ham.cpp', 'src/expectation_eval.cpp']),
+#  dependencies: [g_deps, eigen_dep, spectra_dep],
+#  include_directories: inc,
+#  cpp_args: target_args
+#  )
+#
 build_hamiltonian = executable('build_hamiltonian',
   files(['src/build_hamiltonian.cpp', 'src/expectation_eval.cpp']),
   dependencies: [g_deps, eigen_dep, spectra_dep],
